<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2019 Couchbase, Inc All rights reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/frame_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".LoginActivity"
        >

    <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/username_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="v,16:9"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pict_desc"
            android:src="@mipmap/ic_launcher"
            />

    <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/medium_pad"
            android:text="@string/label_username"
            style="@style/SofaPixTheme.Text.Bold"
            />

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/username_label"
            app:layout_constraintStart_toEndOf="@+id/username_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/large_pad"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            style="@style/SofaPixTheme.Text"
            />

    <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/username_label"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/medium_pad"
            android:text="@string/label_password"
            style="@style/SofaPixTheme.Text.Bold"
            />

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_label"
            app:layout_constraintStart_toEndOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/large_pad"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:hint="@string/hint_password"
            style="@style/SofaPixTheme.Text"
            tools:targetApi="o"
            />

    <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="@dimen/large_pad"
            android:layout_marginBottom="@dimen/large_pad"
            android:background="@drawable/button_background"
            android:text="@string/login"
            style="@style/SofaPixTheme.Text.Bold"
            />
</android.support.constraint.ConstraintLayout>